ADD_EXECUTABLE(formexample.wt Form.C FormExample.C)

TARGET_LINK_LIBRARIES(formexample.wt ${EXAMPLES_CONNECTOR})

INCLUDE_DIRECTORIES(${WT_SOURCE_DIR}/src)

#
# Create a deploy script
#
SET(APPNAME form)
SET(APPBIN formexample.wt)
SET(APPRESOURCES
    "${CMAKE_CURRENT_SOURCE_DIR}/icons ${CMAKE_CURRENT_SOURCE_DIR}/*.xml")
CONFIGURE_FILE(
  ${WT_SOURCE_DIR}/deploy.sh
  ${CMAKE_CURRENT_BINARY_DIR}/deploy.sh
)

ADD_DEPENDENCIES(formexample.wt wt ${EXAMPLES_CONNECTOR})
